<resources>
    <string name="app_name" translatable="false">NMedia</string>
    <string name="avatar_description">Author avatar</string>
    <string name="remove">Remove</string>
    <string name="postText">input post\'s text here</string>
    <string name="description_save">Save new post</string>
    <string name="edit">Edit</string>
    <string name="empty_content_toast">Content can\'t be empty</string>
    <string name="edit_title">Edit message</string>
    <string name="cancel_edit">Cancel edit</string>
    <string name="editing_text">Editing text</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="description_post_save">Save post to add in list</string>
    <string name="play_video">Play video</string>
    <string name="play_video_post">Play video post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notification from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\\\'s post</string>
    <string name="notification_new_post">User %s published new post:</string>
</resources>