<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/postsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/close_edit"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/post" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/toolsTopBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="edit_text_view_title" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="edit, edit_text_view, edit_text_view_title, close_edit" />

    <ImageButton
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/editing_text"
        android:padding="@dimen/common_spacing"
        app:layout_constraintTop_toTopOf="@id/edit_text_view_title"
        app:srcCompat="@drawable/ic_edit_20dp"
        app:tint="@android:color/holo_blue_dark" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_text_view_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFeatureSettings="@string/fab_transformation_scrim_behavior"
        android:text="@string/edit_title"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/font_icons"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/edit_text_view"
        app:layout_constraintStart_toEndOf="@id/edit"
        app:layout_constraintVertical_chainStyle="packed" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/edit_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@id/contentEditText"
        app:layout_constraintEnd_toStartOf="@id/close_edit"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/edit_text_view_title"
        android:minHeight="30dp"
        tools:text="text" />

    <ImageButton
        android:id="@+id/close_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel_edit"
        android:padding="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_view_title"
        app:srcCompat="@drawable/ic_close_24dp" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:hint="@string/postText"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_save_48dp" />
</androidx.constraintlayout.widget.ConstraintLayout>